# qutebrowser

./: .appveyor.yml  .bumpversion.cfg  .bumpversion.toml  .codecov.yml  .coveragerc  .editorconfig  .eslintignore  .eslintrc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .libcst.codemod.yaml  .mailmap  .mypy.ini  .pydocstylerc  .pylintrc  .pyup.yml  .run_checks  .travis.yml  .yamllint  AUTHORS  BUGS  CHANGELOG.asciidoc  CONTRIBUTING.asciidoc  Dockerfile  FAQ.asciidoc  HACKING  INSTALL.asciidoc  ISSUE_TEMPLATE.md  MANIFEST.in  README  README.asciidoc  README.md  README_AI_EXPLAIN.md  THANKS  TODO  codecov.yml  coverage.xml  (+22 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.asciidoc  FUNDING.yml  ISSUE_TEMPLATE.md  LICENSE  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_Bug_report.md  3_Support_question.md  4_Security_issue.md  config.yml
.github/workflows/: bleeding.yml  ci.yml  codeql-analysis.yml  docker.yml  nightly.yml  recompile-requirements.yml  release.yml
.reuse/: dep5
c/: adblock.c
contrib/apparmor/: usr.bin.qutebrowser  usr.local.bin.qutebrowser
doc/: AUTHORS.asciidoc  BUGS  FAQ.asciidoc  HACKING.asciidoc  INSTALL.asciidoc  TODO  backers.asciidoc  changelog.asciidoc  commands.asciidoc  contributing.asciidoc  faq.asciidoc  install.asciidoc  notes  quickstart.asciidoc  qutebrowser.1.asciidoc  settings.asciidoc  stacktrace.asciidoc  treetabs.md  userscripts.asciidoc
doc/extapi/: api.rst  conf.py  index.rst  tab.rst
doc/help/: commands.asciidoc  configuring.asciidoc  index.asciidoc  settings.asciidoc
icons/: qutebrowser.icns  qutebrowser.xpm
misc/: Makefile  lang_list  org.qutebrowser.qutebrowser.appdata.xml  org.qutebrowser.qutebrowser.desktop  qutebrowser.appdata.xml  qutebrowser.desktop  qutebrowser.nsi  qutebrowser.rcc  qutebrowser.spec
misc/apparmor/: usr.bin.qutebrowser
misc/bash/: _qutebrowser
misc/completion/: qutebrowser.zsh
misc/dmgbuild/: settings.py
misc/flatpak/: README.asciidoc  org.qutebrowser.qutebrowser.json  udev-175.json
misc/nsis/: callbacks.nsh  commands.nsh  config.nsh  install.nsh  install_pages.nsh  language-english.nsh  mkunlist.cmd  qutebrowser.nsi  uninstall.nsh  uninstall_pages.nsh  x86.nsi  x86_64.nsi
misc/pyqt_patches/: 6.8_persistant_permissions_minimal.patch
misc/qt_menu.nib/: README
misc/requirements/: README.md  requirements-check-manifest-raw.txt  requirements-check-manifest.txt  requirements-codecov.txt  requirements-cxfreeze.txt  requirements-cxfreeze.txt-raw  requirements-dev.txt  requirements-dev.txt-raw  requirements-docs.txt  requirements-docs.txt-raw  requirements-flake8-raw.txt  requirements-flake8.txt  requirements-flake8.txt-raw  requirements-isort.txt  requirements-mypy.txt  requirements-mypy.txt-raw  requirements-optional.txt  requirements-optional.txt-raw  requirements-pip.txt  requirements-pyinstaller.txt  requirements-pyinstaller.txt-raw  requirements-pylint-master-raw.txt  requirements-pylint-master.in  requirements-pylint-master.txt  requirements-pylint-master.txt-raw  requirements-pylint.txt  requirements-pylint.txt-raw  requirements-pyqt-5.10.txt  requirements-pyqt-5.10.txt-raw  (+62 more)
pkg/: PKGBUILD.qutebrowser-git
qutebrowser/: TODO  __init__.py  __main__.py  app.py  browser.py  commands.py  keys.py  qt.py  qutebrowser.conf  qutebrowser.py  resources.py  simplebrowser.py  widgets.py
scripts/: __init__.py  asciidoc2html.py  build_release.py  check_mergability.sh  ci_install.py  cleanup.py  cycle-inputs.js  dictcli.py  dictionary_to_word_hints.py  ez_setup.py  faster_execution.py  freeze.py  freeze_tests.py  generate_authors.py  generate_authors.sh  generate_doc.py  generate_manpage.py  hist_importer.py  hostblock_blame.py  importer.py  init_venv.py  install_dict.py  keytester.py  link_pyqt.py  minimal_webkit_testbrowser.py  misc_checks.py  mkvenv.py  open_url_in_instance.py  open_url_in_instance.sh  opengl-info.py  opengl_info.py  print_coverage.py  quit_segfault_test.sh  run_checks.py  run_profile.py  run_pylint_on_tests.py  segfault_test.py  setupcommon.py  setupdata.py  src2asciidoc.py  (+6 more)
test/: conftest.py  helpers.py  stubs.py  test_stubs.py
tests/: conftest.py  log.py  logfail.py  pytest.ini  stubs.py  test_conftest.py  test_logfail.py  test_stubs.py
www/: header.asciidoc  qute.css
(+1393 files in other folders)
