[build-system]
requires = ["setuptools >= 42.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qutebrowser"
# What about the other libs in requirements.txt?
dependencies = [
  "jinja2",
  "pyyaml",
]
requires-python = ">=3.9"
authors = [
  {name = "Florian Bruhin", email = "mail@qutebrowser.org"},
]
readme = {file = "README.asciidoc", content-type = "text/asciidoc"}
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["pyqt", "browser", "web", "qt", "webkit", "qtwebkit", "qtwebengine"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: BSD",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
]
# TODO: reconsider making the application files the authoritative source of
# these values, see discussion:
# https://discuss.python.org/t/please-make-package-version-go-away/58501/11
dynamic = [
  "version",
  "description",
]

[project.urls]
homepage = "https://www.qutebrowser.org/"
documentation = "https://www.qutebrowser.org/doc/help/"
repository = "https://github.com/qutebrowser/qutebrowser.git"
issues = "https://github.com/qutebrowser/qutebrowser/issues"
changelog = "https://www.qutebrowser.org/doc/changelog.html"
download = "https://github.com/qutebrowser/qutebrowser/releases"
funding = "https://github.com/qutebrowser/qutebrowser/blob/main/README.asciidoc#donating"

[project.gui-scripts]
qutebrowser = "qutebrowser.qutebrowser:main"

[tool.setuptools.dynamic]
version = {attr = "qutebrowser.__version__"}
description = {attr = "qutebrowser.__description__"}

[tool.setuptools.packages.find]
include = ["qutebrowser", "qutebrowser.*"]  # package names should match these glob patterns (["*"] by default)
