[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.check-manifest]
ignore = [
    "qutebrowser/git-commit-id",
    "qutebrowser/html/doc",
    "qutebrowser/html/doc/*",
    "qutebrowser/html/doc/img/cheatsheet-*.png",
    "*/__pycache__",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["qutebrowser"]
