[metadata]
packages = find:
name = qutebrowser
version = attr: qutebrowser.__version__
description = A keyboard-driven, vim-like browser based on PyQt5.
long_description = file:README.asciidoc
long_description_content_type = text/plain
url = https://www.qutebrowser.org/
author = Florian Bruhin
author_email = mail@qutebrowser.org
license = GPL
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: POSIX :: BSD
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Browsers
keywords = pyqt, browser, web, qt, webkit, qtwebkit, qtwebengine

[options]
include_package_data = True
zip_safe = True
install_requires =
    jinja2
    PyYAML
    dataclasses; python_version < "3.7"
    importlib_resources>=1.1.0; python_version < "3.9"
python_requires = >= 3.6

[options.packages.find]
exclude =
    scripts
    scripts.*

[options.entry_points]
gui_scripts =
    qutebrowser = qutebrowser.qutebrowser:main
